--- a/style.css
+++ b/style.css
@@ -1,2 +1,98 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 /* font-family: "Work Sans", serif; */
+
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Work Sans", serif;
+}
+
+.hero {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(
+      0deg,
+      rgb(16, 16, 16) -19.5%,
+      rgba(16, 16, 16, 0) 100%
+    ),
+    url("assets/hero-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.hero-content {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width: 60%;
+  gap: 20px;
+}
+
+.sub-title {
+  font-weight: 600;
+  font-size: 18px;
+  opacity: 0.8;
+}
+
+.title {
+  font-weight: 700;
+  font-size: 54px;
+}
+.hero-text {
+  opacity: 0.7;
+}
+
+.btn {
+  padding: 21px 32px;
+  border-radius: 8px;
+  background: rgb(82, 195, 3);
+  border: none;
+  color: white;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.card-text {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.btn-box {
+  text-align: center;
+}
+.card-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+.card {
+  text-align: center;
+
+  width: 300px;
+  height: 400px;
+}
+.card > img {
+  width: 100%;
+}
+.card-btn {
+  margin: 12px 0;
+  padding: 10px 18px;
+  border-radius: 8px;
+  border: none;
+  background: rgba(82, 195, 3, 0.15);
+  cursor: pointer;
+}
+
+.card > h2 {
+  margin-bottom: 10px;
+}
