--- a/style.css
+++ b/style.css
@@ -96,3 +96,67 @@
 .card > h2 {
   margin-bottom: 10px;
 }
+
+.about-us {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 20px;
+  align-items: center;
+  text-align: center;
+}
+.about-img {
+  width: 45%;
+  flex-shrink: 0;
+}
+
+.about-img > img {
+  width: 100%;
+}
+
+.about-info {
+  width: 50%;
+
+  flex-shrink: 0;
+  /* margin: 0 auto; */
+  text-align: center;
+}
+.info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.social-icon {
+  display: flex;
+  width: 400px;
+  text-align: center;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+.social-icon > a > img {
+  width: 50px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
+  background: url("/assets/foods.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.opacity {
+  background: rgba(255, 255, 255, 0.8);
+  width: 100%;
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+/* ============================================= */
