--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@
   justify-content: center;
   align-items: center;
   margin: 30px 0;
-  background: url("/assets/foods.png");
+  background: url("assets/foods.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
